--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -8,4 +8,23 @@
     width: '60%';
     margin: 'auto';
   }
+
+  &__button {
+    width: 235px;
+    margin-top: 30px;
+    margin-left: 75px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #363636;
+    text-transform: none;
+  }
+
+  &__navlink {
+    text-decoration: none;
+  }
+
+  &__buttonicon {
+    width: 8%;
+    padding-left: 5px;
+  }
 }
