highlighter added, some media querries added

--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -5,4 +5,12 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 45px;
+
+  @media screen and (max-width: 1150px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: 1fr;
+  }
 }
