--- a/src/components/PostCard/PostCard.module.scss
+++ b/src/components/PostCard/PostCard.module.scss
@@ -1,23 +1,33 @@
+@mixin standard-params {
+  font-size: 16px;
+  color: #363636;
+}
+
 .card {
-  width: 400px;
-  height: 530px;
+  // width: 400px;
+  width: 25rem;
+  // height: 530px;
+  height: 33rem;
   text-align: start;
   border: 1px solid #eaeaea;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
 
   &__image {
-    height: 217px;
+    // height: 217px;
+    height: 13.5rem;
   }
 
   &__contentbox {
-    padding: 25px;
+    // padding: 25px;
+    padding: 1.5rem;
   }
 
   &__datebox {
     display: flex;
     align-items: center;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
+    padding-bottom: 1.25rem;
 
     &_date {
       font-size: 14px;
@@ -27,10 +37,13 @@
     }
 
     &_icon {
-      width: 20px;
-      height: 19px;
+      // width: 20px;
+      width: 1.25rem;
+      // height: 19px;
+      height: 1.19rem;
       color: #797474;
-      padding-right: 9px;
+      // padding-right: 9px;
+      padding-right: 0.6rem;
     }
   }
 
@@ -41,20 +54,22 @@
   }
 
   &__typographybox {
-    height: 200px;
+    // height: 200px;
+    height: 12.5rem;
   }
 
   &__title {
     font-size: 24px;
     line-height: 29px;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
+    padding-bottom: 1.25rem;
   }
 
   &__text {
-    font-size: 16px;
+    @include standard-params;
     line-height: 24px;
-    padding-bottom: 18px;
-    color: #363636;
+    // padding-bottom: 18px;
+    padding-bottom: 1.125rem;
   }
 
   &__navlink {
@@ -62,16 +77,41 @@
   }
 
   &__button {
-    width: 125px;
+    @include standard-params;
+    // width: 125px;
+    width: 7.8rem;
     padding: 0;
     font-weight: 700;
-    font-size: 16px;
-    color: #363636;
     text-transform: none;
   }
 
   &__buttonicon {
     width: 12%;
-    padding-left: 5px;
+    // padding-left: 5px;
+    padding-left: 0.3rem;
+  }
+
+  @media screen and (max-width: 1400px) {
+    width: 22rem;
+  }
+
+  @media screen and (max-width: 1250px) {
+    width: 21rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    width: 20rem;
+  }
+
+  @media screen and (max-width: 1150px) {
+    width: 19rem;
+  }
+
+  @media screen and (max-width: 1000px) {
+    height: 35rem;
+
+    &__typographybox {
+      height: 14rem;
+    }
   }
 }
