--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.highlightClass {
+  background-color: yellow;
+}
