--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -3,14 +3,11 @@
   padding: 40px 5px 3px 5px;
   max-width: 1290px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 45px;
 
-  @media screen and (max-width: 1150px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @media screen and (max-width: 800px) {
-    grid-template-columns: 1fr;
+  &__button {
+    padding: 2px 5px 3px 2px;
+    max-width: 1290px;
+    text-align: end;
   }
 }
