--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -10,7 +10,7 @@
   }
 
   &__button {
-    width: 235px;
+    width: 14.69rem;
     margin-top: 30px;
     margin-left: 75px;
     font-size: 16px;
