--- a/src/components/PostMinCard/PostMinCard.module.scss
+++ b/src/components/PostMinCard/PostMinCard.module.scss
@@ -1,16 +1,17 @@
 @mixin standard-params {
-  font-size: 16px;
+  font-size: 1rem;
   color: #363636;
 }
 
 .card {
-  width: 25rem;
-  height: 33rem;
+  width: 100%;
+  height: 10rem;
   text-align: start;
   border: 1px solid #eaeaea;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
-  margin: 0 auto;
+  padding: 15px;
+  color: #fff;
 
   &__image {
     height: 13.5rem;
@@ -21,23 +22,9 @@
   }
 
   &__datebox {
-    display: flex;
-    align-items: center;
-    padding-bottom: 1.25rem;
-
-    &_date {
-      font-size: 14px;
-      line-height: 21px;
-      color: #363636;
-      opacity: 0.6;
-    }
-
-    &_icon {
-      width: 1.25rem;
-      height: 1.19rem;
-      color: #797474;
-      padding-right: 0.6rem;
-    }
+    display: inline-block;
+    padding: 3px;
+    background-color: rgba(0, 0, 0, 0.6);
   }
 
   &__articlebox {
@@ -51,9 +38,20 @@
   }
 
   &__title {
-    font-size: 24px;
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
     line-height: 29px;
     padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+  &__titlebox {
+    padding-top: 2rem;
+    padding-bottom: 1.25rem;
+    margin: 0 auto;
+    text-align: center;
   }
 
   &__text {
@@ -79,27 +77,22 @@
     padding-left: 0.3rem;
   }
 
-  @media screen and (max-width: 1400px) {
-    width: 22rem;
-  }
-
-  @media screen and (max-width: 1250px) {
-    width: 21rem;
-  }
-
-  @media screen and (max-width: 1200px) {
-    width: 20rem;
-  }
-
-  @media screen and (max-width: 1150px) {
-    width: 19rem;
-  }
-
   @media screen and (max-width: 1000px) {
-    height: 35rem;
-
     &__typographybox {
       height: 14rem;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    height: 12rem;
+    width: 90%;
+
+    &__title {
+      font-size: 1rem;
+    }
+
+    &__text {
+      font-size: 1rem;
     }
   }
 }
