--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -19,17 +19,18 @@
     padding-bottom: 5px;
   }
 
+  &__input {
+    width: 90%;
+    padding: 0 10px 0 10px;
+  }
+
   &__field {
-    width: 600px;
-    margin-bottom: 40px;
+    width: 37.5rem;
+    margin-bottom: 2.5rem;
     background-color: #ffffff;
     border: 1px solid #eaeaea;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
-  }
-
-  &__input {
-    width: 540px;
   }
 
   &__results {
@@ -38,7 +39,7 @@
 
   @media screen and (max-width: 800px) {
     &__field {
-      width: 300px;
+      width: 18.75rem;
     }
 
     &__button {
