--- a/src/pages/ArticlePage/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ArticlePage.module.scss
@@ -7,14 +7,14 @@
 
   &__inner {
     margin: 0 75px 0 75px;
-    transform: translateY(-100px);
+    transform: translateY(-6.25rem);
   }
 
   &__image {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    height: 245px;
+    height: 15.313rem;
     margin: auto;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,7 +23,7 @@
   }
 
   &__title {
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #363636;
     display: flex;
     justify-content: center;
@@ -33,14 +33,13 @@
   }
 
   &__text {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 27px;
     color: #000000;
     padding-bottom: 10px;
   }
 
   &__bodybox {
-    min-width: 90%;
     background-color: #fff;
     border-radius: 5px;
     border: 1px solid #eaeaea;
@@ -50,10 +49,10 @@
   }
 
   &__button {
-    width: 235px;
+    width: 14.7rem;
     margin-top: 30px;
     margin-left: 75px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     color: #363636;
     text-transform: none;
@@ -66,5 +65,17 @@
   &__buttonicon {
     width: 8%;
     padding-left: 5px;
+  }
+
+  @media screen and (max-width: 900px) {
+    &__inner {
+      margin: 0;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    &__bodybox {
+      padding: 45px 25px 50px 25px;
+    }
   }
 }
